--- a/comment/pom.xml
+++ b/comment/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.2.3.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+<!-- 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.2.3.RELEASE</version>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework</groupId>
